[fix] Try to fix POd launch error 'Preview features are not enabled for (...)ParameterRepositoryImpl (class file version 61.65535). Try running with '--enable-preview''